# tezland-metadata-processing

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.metadata-processing.yml  pyproject.toml  scripts.py
metadata_processing/: config.py  cursor.py  daemon.py  gltf_validation.py  models.py  task_pool.py  utils.py  worker.py
tests/: test_metadata_processing.py  test_task_pool.py  test_worker.py
